chore: (tsconfig.json) Update config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,20 @@
 {
   "compilerOptions": {
     "allowJs": false,
+    "allowUnreachableCode": false,
     "declaration": true,
     "emitDecoratorMetadata": false,
+    "exactOptionalPropertyTypes": false,
     "experimentalDecorators": false,
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "ES2020",
+    "moduleResolution": "Node",
+    "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "removeComments": true,
     "sourceMap": false,
     "strict": true,
