--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Appsweet-co/stately-machine#readme",
   "dependencies": {
     "@appsweet-co/ts-utils": "0.35.2",
-    "rxjs": "7.6.0"
+    "rxjs": "7.6.0",
+    "typescript": "4.9.4"
   }
 }
