--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "@appsweet-co/ts-utils": "0.35.2",
     "rxjs": "7.6.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "typedoc": "0.23.22"
   }
 }
