--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "build": "typedoc",
+    "build": "tsc",
+    "build:docs": "typedoc",
     "docs": "npx http-server ./docs -c-1",
-    "postbuild": "cp -f ./logo.svg ./docs/logo.svg",
-    "predocs": "npm run build",
+    "postbuild:docs": "cp -f ./logo.svg ./docs/logo.svg",
+    "predocs": "npm run build:docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
