--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "allowJs": false,
     "allowUnreachableCode": false,
     "declaration": true,
+    "emitDeclarationOnly": true,
     "emitDecoratorMetadata": false,
     "exactOptionalPropertyTypes": false,
     "experimentalDecorators": false,
