--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": true,
+    "skipLibCheck": true,
     "sourceMap": false,
     "target": "ES2020"
   },
