Add Context as Passed Argument (#1) (#3)
* refactor: (main.ts) Add return type annotations

* feat: (const.ts) Add StatelySuccess interface

* chore: (tsconfig.json) Add skipLibCheck

* feat: (main.ts) Add context as passed prop

* chore: (package.json) Add postbuild script

* chore: (*) npm run build

* docs: (*) npm run build:docs

* 0.4.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@appsweet-co/stately-machine",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "A Finite State Machine using Observables",
   "main": "index.ts",
   "publishConfig": {
@@ -11,6 +11,7 @@
     "build": "tsc",
     "build:docs": "typedoc",
     "docs": "npx http-server ./docs -c-1",
+    "postbuild": "npm run build:docs",
     "postbuild:docs": "cp -f ./logo.svg ./docs/logo.svg",
     "predocs": "npm run build:docs",
     "test": "echo \"Error: no test specified\" && exit 1"
